# django-rest-framework-comments

./: MANIFEST.in  README.md  runtests.py  setup.cfg  setup.py
docs/: index.md
docs/api-guide/: authentication.md  caching.md  content-negotiation.md  views.md  (+22 more)
docs_theme/: main.html
drf_comments/: apps.py  authentication.py  checks.py  comments.py  decorators.py  documentation.py  exceptions.py  fields.py  filters.py  generics.py  metadata.py  mixins.py  negotiation.py  pagination.py  parsers.py  permissions.py  relations.py  renderers.py  request.py  response.py  reverse.py  routers.py  serializers.py  settings.py  test.py  throttling.py  urlpatterns.py  urls.py  validators.py  versioning.py  views.py  viewsets.py
tests/: conftest.py  test_api_client.py  test_atomic_requests.py  test_authtoken.py  test_bound_fields.py  test_decorators.py  test_description.py  test_encoders.py  test_exceptions.py  test_fields.py  test_filters.py  test_generics.py  test_htmlrenderer.py  test_lazy_hyperlinks.py  test_metadata.py  test_middleware.py  test_model_serializer.py  test_multitable_inheritance.py  test_negotiation.py  test_one_to_one_with_inheritance.py  test_pagination.py  test_parsers.py  test_permissions.py  test_prefetch_related.py  test_relations.py  test_relations_hyperlink.py  test_relations_pk.py  test_relations_slug.py  test_renderers.py  test_request.py  test_requests_client.py  test_response.py  test_reverse.py  test_routers.py  test_serializer.py  test_serializer_bulk_update.py  test_serializer_lists.py  test_serializer_nested.py  test_settings.py  test_status.py  (+14 more)
(+159 files in other folders)
